
2022-08-26  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l (copy_literal): inlined into literal handling and added
	  missing check for actual literal, fixing bug #773
	* tree.c, tree.h, cobc.c: moved cobc_enum_explain from cobc.c to
	  tree.c as cb_enum_explain
	* tree.h (CB_TREE_TAG_UNEXPECTED_ABORT), field.c, tree.c, typeck.c,
	  codegen.c: added new macro and using it
	* field.c (cb_validate_88_item): check against numeric for all type of
	  values, not only the figurative constants
	* cobc.c, error.c: adjusted message handling to use local buffers
	* field.c (has_std_needed_screen_clause), typeck.c (validate_alphabet),
	  codegen.c (output_initialize_one): minor refactorings

2022-07-27  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* typeck.c (cb_emit_sort_init): avoid SIGSEGV on SORT of toplevel field

2022-07-25  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (finalize_file), codegen.c (output_file_initialization):
	  moved -Wunsupported check for ORGANIZATION INDEXED from codegen
	  to parsing
	* tree.c, typeck.c: msgid change for -Wunsupported

2022-07-01  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (validate_blank_when_zero): iterate over pic->str
	  depending on pic->lenstr (= won't iterate when zero)
	* codegen.c: minimal refactoring
	* tree.c (compare_field_literal): ensure field is verified,
	  otherwise pic and size related checks will fail
	* parser.y, reserved.c, cobc.h: added most missing COBOL2002 data clauses
	  as PENDING and reserved words as necessary
	* scanner.l: distinguish between INVALID KEY and INVALID
	* parser.y, reserved.c: distinguish between VALUES and VALUE,
	  fixing falsely parsed VALUE ARE and VALUES IS
	* parser.y: split level 88 VALUE clause to value_clause_condition,
	  added content_validation format to it (already usable as condition,
	  preparation for later content validation by VALUE statement)

2022-06-10  Ron Norman <rjn@inglenet.com>

	* flag.def,config.def : Moved defaultbyte from flag to config